# tcstring

./: .gitignore  CMakeLists.txt  LICENSE.md  check.h  tcstring.c  tcstring.h  tcstring.pc.in  tcstring.test.c
